--- a/examples/https-nginx/default.conf
+++ b/examples/https-nginx/default.conf
@@ -1,15 +1,13 @@
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server ipv6only=on;
-
-        listen 443 ssl;
+        listen 8080 default_server ssl;
 
         root /usr/share/nginx/html;
         index index.html;
 
-        server_name localhost;
+	ssl on;
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
+	ssl_client_certificate /etc/nginx/conf.d/ca.crt;
 
         location / {
                 try_files $uri $uri/ =404;
